Website/styles/style.css
:root {
  --main-color: #1e1e1e;
  --secundary-color: #2e2e2e;
  --text-color: #ffffff;
  --footer-color: #131313;
  --transition: 0.3s;
  --button-color: #3e3d3da1;
  --side-line-dot-x: -0.85rem;
}

html{
  font-size: min(1.5vw, 20px);
  line-height: 3rem;
}

.logo {
  height: 2rem;
  aspect-ratio: 122/68;
}

div.side-line-dot {
  height: 1.4rem;
  aspect-ratio: 1;
  border: 0.1rem solid #ffffff;
  border-radius: 50%;
  position: absolute;
  left: var(--side-line-dot-x);
  top: calc(8rem + 1rem - 0.7rem);
}

h1{
  font-size: 2.6rem;
  font-weight: 700;
}

h2{
  font-size: 2rem;
  font-weight: 700;
}

h3{
  font-size: 1.2rem;
  font-weight: 700;
}

b{
  font-weight: 500;
}

body {
  background-color: var(--main-color);
  color: var(--text-color);
}

main > article:nth-child(2n + 1) {
  background-color: var(--secundary-color);
}

header {
  display: flex;
  flex-direction: column;
  background-image: url("../imgs/coverImg.webp");
  background-size: cover;
  background-position: center;
  background-attachment: fixed; /* https://www.w3schools.com/howto/howto_css_parallax.asp */
  background-repeat: no-repeat;
  height: 100vh;
} 

header-navbar {
  height: 5rem;
  width: 100%;
  font-size: 1.3rem;
} 

header-navbar nav {
  height: 100%;
  width: 100%;
}

header-navbar nav ul {
  display: flex;
  justify-content: right;
  align-items: center;
  height: 100%;
  padding: 0 1.6rem;
  gap: 1.6rem;
  box-sizing: border-box;
}

header-navbar nav ul li:first-child {
  margin-right: auto;
}

nav ul li a {
  cursor: pointer;
  position: relative;
}

nav ul li a::after { /* underline effect https://www.youtube.com/watch?v=UpJyCDEXEtc&t=15s*/
  content: '';
  position: absolute;
  height: 0.12rem;
  width: 0;
  background-color: #ffffff;
  bottom: -0.2rem;
  left: 0;
  transition: width var(--transition);
}

nav ul li a:hover::after {
  width: 100%;
}

header-navbar nav ul li:first-child a::after {
  display: none;
}

article{
  display: flex;
  flex-direction: column;
  padding:0 7rem;
}

section.main-section-content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  height: 100%;
  text-align: left;
  gap: 2.3rem;
  padding: 8rem 0 8rem 2.3rem;
  border-left: #ffffff 0.13rem solid;
  position: relative;
}

section.text-buttons {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 1.2rem;
  width: 26rem;
}

section.text-buttons p {
  font-size: 1.2rem;
  line-height: 1.7rem;
  letter-spacing: 0.02rem;
  font-weight: 300;
}

article#contact-form section.text-buttons {
  width: 50rem;
}

form {
  display: flex;
  flex-direction: column;
  gap: 1.2rem;
  width: 100%;
}

section#email-name {
  display: flex;
  gap: 1.2rem;
  width: 100%;
}

section#email-name section {
  display: flex;
  flex-direction: column;
  gap: 0.1rem;
  width: 100%;
}

input, textarea {
  width: 100%;
  gap: 0.1rem;
  height: 2.5rem;
  font-size: 1rem;
  background-color: var(--button-color);
  border: none;
  border-bottom: #c1c1c1 0.1rem solid;
  padding: 0.3rem 0.8rem;
  box-sizing: border-box;
  color: var(--text-color);
}

.acceptable {
  border-bottom: #9bcc9b 0.1rem solid;
}

.unacceptable {
  border-bottom: #da8888 0.1rem solid;
}

textarea {
  height: 10rem;
  resize: none;
  padding: 0.8rem;
}

input::placeholder, textarea::placeholder {
  color: #ffffff7f;
  font-size: 0.9rem;
  font-family: 'Roboto', sans-serif;
}

input:hover, textarea:hover {
  filter: brightness(1.2);
}

input:focus, textarea:focus {
	filter: brightness(2);
}

button {
  width: min-content;
  align-self: flex-end;
}

section.text-buttons a, button {
  color: #ffffff;
  font-size: 1rem;
  font-weight: 500;
  padding: 0.7rem 1.7rem;
  border: 0.15rem solid #ffffff;
  transition: var(--transition);
  background-color: var(--button-color);
}

section.text-buttons a:hover, button:hover {
  background-color: #ffffff;
  color: #000000;
  cursor: pointer;
}

article.about-article section.main-section-content, header section.main-section-content {
  padding-right: 2.3rem;
  align-items: flex-end;
  text-align: right;
  border-left: none;
  border-right: #ffffff 0.13rem solid;
}

article.about-article section.main-section-content {
  border-top: #ffffff 0.13rem solid;
}

article.about-article div.side-line-dot {
  left: auto;
  right: var(--side-line-dot-x);
  top: calc(8rem + 1.3rem - 0.7rem);
} 

article.about-article section.text-buttons {
  align-items: flex-end;
}

header article{
  height: 100%;
  justify-content: flex-end;
}

header section.main-section-content {
  justify-content: flex-start;
  height: 40%;
  border-bottom: #ffffff 0.13rem solid;
  padding-top: 1.7rem;
}

header section.text-buttons p {
  font-size: 1.2rem;
  font-weight: 300;
}

header section.text-buttons section {
  display: flex;
  justify-content: flex-end;
  gap: 1.2rem;
  width: 100%;
}

header div.side-line-dot {
  right: var(--side-line-dot-x);
  left: auto;
  top: calc(1.7rem + 1.3rem - 0.7rem);
}

footer {
  padding: 4rem 8rem;
  background-color: var(--footer-color);
}

footer-nav-links {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 2.5rem;
}

footer-nav-links nav {
  width: 100%;
  display: flex;
  justify-content: space-around;
}

footer-nav-links nav ul {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 0.6rem;
}

footer-nav-links nav ul li {
  width: fit-content;
}

footer-nav-links nav ul li a::after {
  height: 0.01rem;
  bottom: -0.05rem;
}

footer-nav-links nav ul li:first-child a::after {
  height: 0.12rem;
  bottom: -0.2rem;
}

footer-nav-links nav ul li a img.logo {
  height: 3rem;
}

footer-nav-links nav ul:first-child li:first-child a::after {
  display: none;
}

footer-nav-links nav ul:first-child li:nth-child(2) a::after {
  height: 0.12rem;
  bottom: -0.2rem;
}

footer-nav-links hr {
  width: 100%;
  border: 0.01rem solid #ffffff;
}

section.socials{
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  width: 100%;
}

section.socials nav {
  display: flex;
  justify-content: center;
}

section.socials nav ul {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 5rem;
}

section.socials nav ul li a::after {
  display: none;
}

section.socials nav ul li a:hover i{
  transform: scale(1.2);
}

section.socials nav i{
  font-size: 3.5rem;
  transition: var(--transition);
}

section.socials nav i:hover {
  color: #ffffff;
}

section.socials p {
  font-size: 0.9rem;
  font-weight: 200;
  filter: opacity(0.);
}

header.subpage-header {
  height: 40vh;
  background-position: bottom;
}

header.subpage-header article section.main-section-content{
  padding-bottom: 2.5rem;
}

article#gear h3{
  font-size: 1.6rem;
  font-weight: 700;
  margin-top: 2rem;
}

/* Jak stylovat scrollbar jsem se dozvěděl zde https://youtu.be/v_8CmC6cwUs?si=cYsrz0IlJKBydpuY */
html::-webkit-scrollbar { 
  width: 0.55vw;
}

html::-webkit-scrollbar-thumb {
  background-color: #ffffff27;
  border-radius: 0.3vw;;
}

html::-webkit-scrollbar-track {
  background-color: #ffffff00;
}

html::-webkit-scrollbar-thumb:hover {
  background-color: #ffffff39;
}

html::-webkit-scrollbar-track:hover {
  background-color: #ffffff11;
}

